--- a/frontend/src/pages/frontpage.css
+++ b/frontend/src/pages/frontpage.css
@@ -20,8 +20,7 @@ body {
 }
 
 .container {
-  width: 100%;
-  max-width: 500px;
+  width: 300px;
   background: var(--form-bg);
   padding: 20px;
   border-radius: 12px;
